회원가입 후 리다이렉트 되도록 수정

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -31,6 +31,7 @@
             type: "POST",
         }).done(function () {
             alert("회원가입 완료!");
+            window.location = '/';
         });
     }
 </script>
