--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
 
 <button onclick="login('session')">세션 로그인</button>
 <button onclick="login('token')">토큰 로그인</button>
+<button onclick="location.href='/oauth2/authorization/google'">구글 로그인</button>
 <button onclick="location.href='signup'">회원가입</button>
 
 <script th:inline="javascript">
@@ -23,13 +24,14 @@
             "password" : userPw
         };
         const loginUrl = `/login/${param}`;
+
         $.ajax({
             url: loginUrl,
             contentType: 'application/json',
             data: JSON.stringify(memberDto),
             type: "POST",
-        }).done(function (param) {
-           // alert(param);
+        }).done(function () {
+            location.href = `/main/${param}`;
         });
     }
 </script>
