게시물 예제 관련 페이지 생성

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 <h2>메인 페이지 입니다</h2><br>
-<p th:text="'안녕하세요 ' + ${data} + ' 님'"/>
+<p th:text="'안녕하세요 ' + ${data} + ' 님'"/> <br>
 
+<button onclick="location.href='/article/find/all'">글 목록</button>
 </body>
 </html>
