컨트롤러 분리에 따른 호출 api 수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <button onclick="login('session')">세션 로그인</button>
 <button onclick="login('token')">토큰 로그인</button>
 <button onclick="location.href='/oauth2/authorization/google'">구글 로그인</button>
-<button onclick="location.href='signup'">회원가입</button>
+<button onclick="location.href='/member/signup'">회원가입</button>
 
 <script th:inline="javascript">
     function login(param) {
