--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -25,7 +25,7 @@
             userPw
         };
         $.ajax({
-            url: '/signup',
+            url: '/member/signup',
             contentType: 'application/json',
             data: JSON.stringify(memberDto),
             type: "POST",
